--- a/cardapio.html
+++ b/cardapio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/logoremovido.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"/>
     <link rel="stylesheet" href="style/output.css">
     <title>Wando's Lanches Cardápio</title>
 </head>
@@ -20,6 +21,11 @@
 
             <div class="bg-green-600 px-4 py-1 rounded-lg mt-5" id="date-span">
                 <span class="text-white font-medium">De Quinta-feira a Terça-Feira das 17:30h à 01:00h</span>
+            </div>
+            <div class="flex gap-2">
+                <a href="index.html" target="_self" class="bg-white text-gray-900 font-medium px-3 py-1 rounded-md m-5">Página Inicial</a>
+                <a href="https://www.instagram.com/wandoslanches/" target="_blank"><i class="fab fa-instagram text-white text-2xl m-4"></i></a>
+                <a href="https://web.facebook.com/wandoslanches?locale=pt_BR" target="_blank"><i class="fab fa-facebook-square text-white text-2xl m-4"></i></a>
             </div>
         </div>
     </header>
@@ -215,5 +221,7 @@
 
     <script src="script.js"></script>
 
+
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
