--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="font-sans bg-cover bg-center bg-no-repeat overflow-x-hidden" style="background-image: url('images/background.jpg');">
+<body class="font-sans bg-cover bg-center bg-no-repeat overflow-hidden" style="background-image: url('images/background.jpg');">
+
     <div class="relative h-screen">
         <div class="flex items-center justify-between px-8 py-4 md:px-16 md:py-8">
             <div class="flex-shrink-0 nav-logo">
@@ -17,16 +18,18 @@
             <i class="fa fa-bars text-white text-2xl cursor-pointer md:hidden" onclick="showMenu()"></i>
             <div id="nav-links" class="hidden md:flex flex-grow items-center justify-between">
                 <ul class="flex space-x-6 ml-12">
-                    <li><a href="#" class="text-white text-sm hover:underline">PÁGINA INICIAL</a></li>
-                    <li><a href="#" class="text-white text-sm hover:underline">SOBRE NÓS</a></li>
-                    <li><a href="cardapio.html" class="text-white text-sm hover:underline">CARDÁPIO</a></li>
+                    <li><a href="#" class="text-purple-800 text-sm font-bold hover:text-white hover:underline">PÁGINA INICIAL</a></li>
+                    <li><a href="sobrenos.html" class="text-purple-800 text-sm font-bold hover:text-white hover:underline">SOBRE NÓS</a></li>
+                    <li><a href="cardapio.html" class="text-purple-800 text-sm font-bold hover:text-white hover:underline">
+                        CARDÁPIO
+                    </a></li>
                 </ul>
-                <button type="button" class="px-4 py-2 bg-yellow-500 text-black font-bold ml-4">SING UP</button>
+                
             </div>
         </div>
 
         <div class="text-white mx-10 my-20 md:mx-32 md:my-40">
-            <h1 class="text-4xl md:text-6xl mb-8">Delícias artesanais, <span class="text-yellow-500">sabores irresistíveis.</span><br> Venha provar!</h1>
+            <h1 class="text-4xl md:text-6xl mb-8">Delícias artesanais, <span class="text-purple-600">sabores irresistíveis.</span><br> Venha provar!</h1>
             <div class="flex items-center space-x-4">
                 <a href="https://api.whatsapp.com/send?phone=5519997288018&text=Ol%C3%A1%F0%9F%96%90%EF%B8%8F%0APoderia%20me%20enviar%20o%20card%C3%A1pio%20por%20gentileza%3F%20" class="fab fa-whatsapp text-4xl text-black bg-yellow-500 rounded-full p-2 cursor-pointer" target="_blank"></a>
                 <a href="https://www.facebook.com/wandoslanches?locale=pt_BR" class="fab fa-facebook text-4xl text-black bg-yellow-500 rounded-full p-2 cursor-pointer" target="_blank"></a>
@@ -45,29 +48,20 @@
             </div>
         </div>
 
-        <div class="absolute bottom-0 right-0 flex items-center bg-yellow-500 shadow-lg w-full md:w-1/3 p-4">
-            <div class="flex-1">
-                <small class="text-black pl-3">ESPECIAL DE HAMBÚRGUER</small><br>
-                <div class="text-right mt-2">
-                    <a href="#" class="text-black text-sm mr-4">Anterior</a>
-                    <a href="#" class="text-black text-sm p-8">Próximo</a>
-                </div>
-            </div>
-            <div class="flex-1">
-                <img src="images/imgsmall.jpg" class="rounded-lg">
-            </div>
-        </div>
+        
     </div>
 
     <div id="mobile-menu" class="fixed inset-0 bg-black bg-opacity-90 text-white flex flex-col items-center justify-center space-y-8 hidden md:hidden">
         <i class="fa fa-close text-2xl cursor-pointer" onclick="closeMenu()"></i>
         <ul class="space-y-6 text-center">
-            <li><a href="#" class="text-xl">PÁGINA INICIAL</a></li>
-            <li><a href="#" class="text-xl">SOBRE NÓS</a></li>
+            <li><a href="sobrenos.html" class="text-xl">SOBRE NÓS</a></li>
             <li><a href="cardapio.html" class="text-xl">CARDÁPIO</a></li>
         </ul>
-        <a id="whatsapp-icon" target="_blank"></a><button type="button" class="px-6 py-3 bg-yellow-500 text-black font-bold rounded-full">Precisa de ajuda?</button>
+        <button type="button" class="px-6 py-3 bg-yellow-500 text-black font-bold rounded-full" onclick="openWhatsApp()">Precisa de ajuda?</button>
     </div>
+
+    <div id="map" class="h-96"></div>
+
 
     <script>
         var mobileMenu = document.getElementById("mobile-menu");
