--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="shortcut icon" href="images/logoremovido.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <meta property="og:type" content="webstie">
+    <meta property="og:title" content="Wando's Lanches - Delícias artesanais, sabores irresistíveis. Venha provar!">
+    <meta property="og:image" content="https://wandos-lanches.vercel.app/images/logoremovido.png">
+    <meta property="og:description" content="O melhores lanches você só encontra aqui!">
+    <meta property="og:site_name" content="Wando's Lanches">
+
 </head>
 <body class="font-sans bg-cover bg-center bg-no-repeat overflow-hidden" style="background-image: url('images/background.jpg');">
 
