--- a/cardapio.html
+++ b/cardapio.html
@@ -2045,37 +2045,37 @@
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16" id="menu">
 
-        <div class="max-w-4xl mx-auto bg-white p-6 rounded-lg shadow-md">
-            <h1 class="text-xl sm:text-2xl md:text-3xl font-bold mb-4 text-center">SUCOs (100% NATURAL 500ml)</h1>
+        <div class="max-w-4xl mx-auto bg-white p-5">
+            <h1 class="text-xl sm:text-2xl md:text-1xl font-bold mb-4 text-center">SUCOs (100% NATURAL 500ml)</h1>
             <div class="mb-4">
-                <span class="text-md sm:text-lg md:text-xl font-semibold">77</span>
-                <span class="text-md sm:text-lg md:text-xl">LARANJA / ACEROLA / MARACUJÁ / MORANGO / ABACAXI / ABACAXI COM HORTELÃ</span>
+                <span class="text-md sm:text-sm md:text-sm font-semibold">77</span>
+                <span class="text-md sm:text-sm md:text-xl">LARANJA / ACEROLA / MARACUJÁ / MORANGO / ABACAXI / ABACAXI COM HORTELÃ</span>
             </div>
             <div class="overflow-x-auto">
-                <table class="min-w-full divide-y divide-gray-200">
-                    <thead class="bg-gray-50">
+                <table class="table-auto w-full">
+                    <thead>
                         <tr>
-                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"> </th>
-                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">COM ÁGUA</th>
-                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">COM LEITE</th>
-                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">COMBINADO C/ ÁGUA (2 SABORES)</th>
-                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">COMBINADO C/ LEITE (2 SABORES)</th>
+                            <th class="px-1 py-2 border"> </th>
+                            <th class="px-1 py-2 border">COM ÁGUA</th>
+                            <th class="px-1 py-2 border">COM LEITE</th>
+                            <th class="px-1 py-2 border">COMBINADO C/ ÁGUA (2 SABORES)</th>
+                            <th class="px-1 py-2 border">COMBINADO C/ LEITE (2 SABORES)</th>
                         </tr>
                     </thead>
-                    <tbody class="bg-white divide-y divide-gray-200">
+                    <tbody>
                         <tr>
-                            <td class="px-4 py-2 whitespace-nowrap">COPO</td>
-                            <td class="px-4 py-2 whitespace-nowrap">R$ 10,00</td>
-                            <td class="px-4 py-2 whitespace-nowrap">R$ 13,00</td>
-                            <td class="px-4 py-2 whitespace-nowrap">R$ 13,00</td>
-                            <td class="px-4 py-2 whitespace-nowrap">R$ 15,00</td>
+                            <td class="px-1 py-1 border">COPO</td>
+                            <td class="px-1 py-1 border">R$ 10,00</td>
+                            <td class="px-1 py-1 border">R$ 13,00</td>
+                            <td class="px-1 py-1 border">R$ 13,00</td>
+                            <td class="px-1 py-1 border">R$ 15,00</td>
                         </tr>
                         <tr>
-                            <td class="px-4 py-2 whitespace-nowrap">JARRA</td>
-                            <td class="px-4 py-2 whitespace-nowrap">R$ 18,00</td>
-                            <td class="px-4 py-2 whitespace-nowrap">R$ 22,00</td>
-                            <td class="px-4 py-2 whitespace-nowrap">R$ 23,00</td>
-                            <td class="px-4 py-2 whitespace-nowrap">R$ 27,00</td>
+                            <td class="px-1 py-1 border">JARRA</td>
+                            <td class="px-1 py-1 border">R$ 18,00</td>
+                            <td class="px-1 py-1 border">R$ 22,00</td>
+                            <td class="px-1 py-1 border">R$ 23,00</td>
+                            <td class="px-1 py-1 border">R$ 27,00</td>
                         </tr>
                     </tbody>
                 </table>
