--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <i class="fa fa-close text-2xl cursor-pointer" onclick="closeMenu()"></i>
         <ul class="space-y-6 text-center">
             <li><a href="sobrenos.html" class="text-xl">SOBRE NÓS</a></li>
-            <li><a href="cardapio.html" class="text-xl">CARDÁPIO</a></li>
+            <li><a href="manutencao.html" class="text-xl">CARDÁPIO</a></li>
         </ul>
         <button type="button" class="px-6 py-3 bg-yellow-500 text-black font-bold rounded-full" onclick="openWhatsApp()">Precisa de ajuda?</button>
     </div>
